tests/ui/not_an_enum.stderr
error: Termination can only be derived for enums
 --> tests/ui/not_an_enum.rs:4:1
  |
4 | struct NotAnEnum;
  | ^^^^^^^^^^^^^^^^^
