tests/ui/not_an_enum.rs
use derive_termination::Termination;

#[derive(Termination)]
struct NotAnEnum;

fn main() {}
